--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -1005,8 +1005,16 @@ buildings:
     - pegasus/spam
   0cd31aea:
     - jasoncw/judith-krug-branch-library
+  0d03a117:
+    - madhatter106/midrise-office-pack-vol09
+  0d03a43f:
+    - madhatter106/midrise-office-pack-vol09
   0d1d6acb:
     - maxis/stone-house
+  0d481c14:
+    - madhatter106/medium-wealth-shops-vol01
+  0d481c34:
+    - madhatter106/medium-wealth-shops-vol01
   0d4fdea6:
     - maxis/longfellow-castle
   0d72162d:
@@ -1219,12 +1227,22 @@ buildings:
     - jasoncw/union-bank-plaza
   2c990000:
     - toroca/toll-booth-booster
+  2d03a34c:
+    - madhatter106/midrise-office-pack-vol09
+  2d03a48e:
+    - madhatter106/midrise-office-pack-vol09
   2d1e7a9e:
     - maxis/temple-of-grutz
   2d217719:
     - maxis/grutze-industries
   2d3f0000:
     - maxis/longfellow-castle
+  2d481b03:
+    - madhatter106/medium-wealth-shops-vol01
+  2d481b65:
+    - madhatter106/medium-wealth-shops-vol01
+  2d481bc0:
+    - madhatter106/medium-wealth-shops-vol01
   2d4b0000:
     - maxis/longfellow-castle
   2d5928ff:
@@ -1233,6 +1251,8 @@ buildings:
     - csx/mega-props-vol01
   2d74d64a:
     - csx/mega-props-vol01
+  2d8ad4cc:
+    - madhatter106/medium-wealth-shops-vol02
   2dabec67:
     - csx/mega-props-vol04
   2db3e905:
@@ -1325,6 +1345,12 @@ buildings:
     - mickebear/mega-props-vol03
   31f3686e:
     - debussyman/mega-props-vol01
+  3218b7f5:
+    - madhatter106/midrise-office-pack-vol10
+  3218b84c:
+    - madhatter106/midrise-office-pack-vol10
+  3218b892:
+    - madhatter106/midrise-office-pack-vol10
   321abee0:
     - debussyman/mega-props-vol01
   321ac087:
@@ -1411,6 +1437,18 @@ buildings:
     - 11241036/seasonal-woods-2
   4ce60e32:
     - pegasus/spam
+  4d03a263:
+    - madhatter106/midrise-office-pack-vol09
+  4d03a325:
+    - madhatter106/midrise-office-pack-vol09
+  4d03a3a6:
+    - madhatter106/midrise-office-pack-vol09
+  4d03a4ba:
+    - madhatter106/midrise-office-pack-vol09
+  4d03a4f3:
+    - madhatter106/midrise-office-pack-vol09
+  4d481b51:
+    - madhatter106/medium-wealth-shops-vol01
   4d50ba18:
     - maxis/longfellow-castle
   4d69a362:
@@ -1431,6 +1469,8 @@ buildings:
     - csx/mega-props-vol01
   4ebf8524:
     - csx/mega-props-vol05
+  4f9c0d66:
+    - madhatter106/midrise-office-pack-vol09
   505c2637:
     - pegasus/spam
   5093d15b:
@@ -1457,6 +1497,8 @@ buildings:
     - csx/mega-props-vol06
   515388dc:
     - csx/mega-props-vol06
+  5162df32:
+    - madhatter106/medium-wealth-shops-vol02
   5168793a:
     - mickebear/mega-props-vol02
   5185180d:
@@ -1573,12 +1615,20 @@ buildings:
     - pegasus/spam
   6cac42fb:
     - pegasus/spam
+  6d03a2b7:
+    - madhatter106/midrise-office-pack-vol09
+  6d03a3d2:
+    - madhatter106/midrise-office-pack-vol09
   6d2170b6:
     - maxis/grutzehaus
   6d2172e0:
     - maxis/stone-house
   6d75e9e9:
     - csx/mega-props-vol01
+  6d8ad497:
+    - madhatter106/medium-wealth-shops-vol02
+  6d8ad4dc:
+    - madhatter106/medium-wealth-shops-vol02
   6d8d1d03:
     - csx/mega-props-vol07
   6d90bb78:
@@ -1745,13 +1795,31 @@ buildings:
     - pegasus/spam
   8c965f44:
     - 11241036/seasonal-woods-2
+  8d03a1b0:
+    - madhatter106/midrise-office-pack-vol09
+  8d03a1e2:
+    - madhatter106/midrise-office-pack-vol09
+  8d03a308:
+    - madhatter106/midrise-office-pack-vol09
+  8d03a41b:
+    - madhatter106/midrise-office-pack-vol09
   8d21717e:
     - maxis/grutze-industries
+  8d481b39:
+    - madhatter106/medium-wealth-shops-vol01
+  8d481bfa:
+    - madhatter106/medium-wealth-shops-vol01
   8d7215be:
     - csx/mega-props-vol01
     - csx/mega-props-vol05
   8d75e880:
     - csx/mega-props-vol01
+  8d8ad47f:
+    - madhatter106/medium-wealth-shops-vol02
+  8d8ad4b6:
+    - madhatter106/medium-wealth-shops-vol02
+  8d8ad4ed:
+    - madhatter106/medium-wealth-shops-vol02
   8dbb600c:
     - csx/mega-props-vol04
   8ddaced1:
@@ -1822,6 +1890,8 @@ buildings:
     - jasoncw/innovation-center
   91eb2b17:
     - mattb325/batprops-vol01
+  9218b8cf:
+    - madhatter106/midrise-office-pack-vol10
   924f1788:
     - jasoncw/pietzsch-house
   925a7567:
@@ -1908,6 +1978,12 @@ buildings:
     - bones1/industry-doubler
   ac965f24:
     - 11241036/seasonal-woods-2
+  ad03a188:
+    - madhatter106/midrise-office-pack-vol09
+  ad03a471:
+    - madhatter106/midrise-office-pack-vol09
+  ad481bb3:
+    - madhatter106/medium-wealth-shops-vol01
   ad5755cc:
     - csx/mega-props-vol01
   ad5b8957:
@@ -1915,6 +1991,8 @@ buildings:
   ad7215e8:
     - csx/mega-props-vol01
     - csx/mega-props-vol05
+  ad8ad51c:
+    - madhatter106/medium-wealth-shops-vol02
   adbbac25:
     - csx/mega-props-vol04
   adca3aa8:
@@ -1953,6 +2031,8 @@ buildings:
     - csx/mega-props-vol05
   b1538300:
     - csx/mega-props-vol06
+  b162df0b:
+    - madhatter106/medium-wealth-shops-vol02
   b184c540:
     - jasoncw/train-station-set
   b1851883:
@@ -1967,6 +2047,8 @@ buildings:
     - mickebear/mega-props-vol03
   b1f220e9:
     - mickebear/mega-props-vol03
+  b218b8c0:
+    - madhatter106/midrise-office-pack-vol10
   b2a602f4:
     - jasoncw/basildon-terraces
   b340e400:
@@ -2051,8 +2133,14 @@ buildings:
     - buggi/mark-x-windblaster
   ccdc1adf:
     - jasoncw/albee-amphitheater
+  cd03a2ed:
+    - madhatter106/midrise-office-pack-vol09
+  cd03a3fb:
+    - madhatter106/midrise-office-pack-vol09
   cd3f4f74:
     - csx/mega-props-vol01
+  cd481ba6:
+    - madhatter106/medium-wealth-shops-vol01
   cd716e25:
     - csx/mega-props-vol01
   cd72f07b:
@@ -2236,14 +2324,24 @@ buildings:
     - memo/submenus-dll
   ec1d2367:
     - vip/tree-props
+  ed03a231:
+    - madhatter106/midrise-office-pack-vol09
+  ed03a290:
+    - madhatter106/midrise-office-pack-vol09
   ed1e75d3:
     - maxis/temple-of-grutz
   ed2174a0:
     - maxis/grutzehaus
+  ed481b1b:
+    - madhatter106/medium-wealth-shops-vol01
+  ed481b90:
+    - madhatter106/medium-wealth-shops-vol01
   ed755cce:
     - csx/mega-props-vol01
   ed75edaa:
     - csx/mega-props-vol01
+  ed8ad50e:
+    - madhatter106/medium-wealth-shops-vol02
   eddace97:
     - bsc/misc-props-vol01
   edf53711:
@@ -2320,6 +2418,8 @@ buildings:
     - mickebear/mega-props-vol03
   f1ef1f32:
     - mickebear/mega-props-vol03
+  f218b811:
+    - madhatter106/midrise-office-pack-vol10
   f340e3cd:
     - citynut/mega-props-vol02
   f4185278:
@@ -2436,10 +2536,34 @@ lots:
     - jasoncw/judith-krug-branch-library
   0d1d6acb:
     - maxis/stone-house
+  0d4935e9:
+    - madhatter106/medium-wealth-shops-vol01
+  0d4936b0:
+    - madhatter106/medium-wealth-shops-vol01
+  0d4945f3:
+    - madhatter106/medium-wealth-shops-vol01
+  0d4946f9:
+    - madhatter106/medium-wealth-shops-vol01
+  0d494dc1:
+    - madhatter106/medium-wealth-shops-vol01
+  0d494fe5:
+    - madhatter106/medium-wealth-shops-vol01
+  0d495003:
+    - madhatter106/medium-wealth-shops-vol01
   0d4fdea6:
     - maxis/longfellow-castle
   0e11edcd:
     - jasoncw/kallax-residential
+  0f9bf691:
+    - madhatter106/midrise-office-pack-vol09
+  0f9bf745:
+    - madhatter106/midrise-office-pack-vol09
+  0f9bf9a3:
+    - madhatter106/midrise-office-pack-vol09
+  0f9bfa90:
+    - madhatter106/midrise-office-pack-vol09
+  0f9bfee9:
+    - madhatter106/midrise-office-pack-vol09
   101c2267:
     - jasoncw/alaska-building
   10a8e301:
@@ -2450,6 +2574,18 @@ lots:
     - jasoncw/korimako-hotel
   116055b7:
     - jasoncw/model-discount-furniture
+  1162eeaf:
+    - madhatter106/medium-wealth-shops-vol02
+  1162eef6:
+    - madhatter106/medium-wealth-shops-vol02
+  1162ef0a:
+    - madhatter106/medium-wealth-shops-vol02
+  1162ef52:
+    - madhatter106/medium-wealth-shops-vol02
+  1219caac:
+    - madhatter106/midrise-office-pack-vol10
+  1219ce58:
+    - madhatter106/midrise-office-pack-vol10
   1443f7f3:
     - cococity/coco-pyeonhansesang-apartment
   1443fd77:
@@ -2518,12 +2654,54 @@ lots:
     - maxis/temple-of-grutz
   2d217719:
     - maxis/grutze-industries
+  2d493973:
+    - madhatter106/medium-wealth-shops-vol01
+  2d4939e7:
+    - madhatter106/medium-wealth-shops-vol01
+  2d493cd7:
+    - madhatter106/medium-wealth-shops-vol01
+  2d493d63:
+    - madhatter106/medium-wealth-shops-vol01
+  2d49445d:
+    - madhatter106/medium-wealth-shops-vol01
+  2d49449f:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494644:
+    - madhatter106/medium-wealth-shops-vol01
+  2d49480a:
+    - madhatter106/medium-wealth-shops-vol01
+  2d49483f:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494a39:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494a79:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494b27:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494c33:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494f8f:
+    - madhatter106/medium-wealth-shops-vol01
+  2d494fc5:
+    - madhatter106/medium-wealth-shops-vol01
   2d6705a9:
     - toroca/5x5-and-6x6-malls
   2e891faa:
     - maxis/shorty-burger
   2ee0c2a9:
     - jasoncw/denton-corporation
+  2f9bf0a6:
+    - madhatter106/midrise-office-pack-vol09
+  2f9bf663:
+    - madhatter106/midrise-office-pack-vol09
+  2f9bf8c0:
+    - madhatter106/midrise-office-pack-vol09
+  2f9bfb80:
+    - madhatter106/midrise-office-pack-vol09
+  2f9bfcd3:
+    - madhatter106/midrise-office-pack-vol09
+  2f9c14e6:
+    - madhatter106/midrise-office-pack-vol09
   30c052e8:
     - jeronij/ship-pack
   30c05b68:
@@ -2534,8 +2712,30 @@ lots:
     - pegasus/spam
   31375d81:
     - jasoncw/geodesic-dome-pavilion
+  3162ec34:
+    - madhatter106/medium-wealth-shops-vol02
+  3162ee4b:
+    - madhatter106/medium-wealth-shops-vol02
+  3162ee98:
+    - madhatter106/medium-wealth-shops-vol02
   31ae2d4c:
     - jasoncw/magasin-valois
+  3218db79:
+    - madhatter106/midrise-office-pack-vol10
+  3218dca7:
+    - madhatter106/midrise-office-pack-vol10
+  '3218e136':
+    - madhatter106/midrise-office-pack-vol10
+  '3218e206':
+    - madhatter106/midrise-office-pack-vol10
+  3218e22a:
+    - madhatter106/midrise-office-pack-vol10
+  3219cb48:
+    - madhatter106/midrise-office-pack-vol10
+  3219cc3a:
+    - madhatter106/midrise-office-pack-vol10
+  3219cc94:
+    - madhatter106/midrise-office-pack-vol10
   3426a2a4:
     - cococity/coco-hillstate-apartment
   3936f638:
@@ -2596,16 +2796,48 @@ lots:
     - jasoncw/wellington-place
   4c9fcb9f:
     - maxis/taipei-art-museum
+  4d494973:
+    - madhatter106/medium-wealth-shops-vol01
+  4d494996:
+    - madhatter106/medium-wealth-shops-vol01
+  4d494c9b:
+    - madhatter106/medium-wealth-shops-vol01
+  4d494e1a:
+    - madhatter106/medium-wealth-shops-vol01
+  4d495122:
+    - madhatter106/medium-wealth-shops-vol01
+  4d495147:
+    - madhatter106/medium-wealth-shops-vol01
+  4d495169:
+    - madhatter106/medium-wealth-shops-vol01
   4d50ba18:
     - maxis/longfellow-castle
   4d670471:
     - toroca/5x5-and-6x6-malls
+  4f9bfc8e:
+    - madhatter106/midrise-office-pack-vol09
+  5162eede:
+    - madhatter106/medium-wealth-shops-vol02
   51ab888e:
     - jasoncw/pizza-ribs-sushi
   51d5c7c3:
     - jasoncw/webb-chapel-park-pavilion
+  5218ddde:
+    - madhatter106/midrise-office-pack-vol10
+  5218de2c:
+    - madhatter106/midrise-office-pack-vol10
+  '5218e081':
+    - madhatter106/midrise-office-pack-vol10
+  5218e0c8:
+    - madhatter106/midrise-office-pack-vol10
+  5219c91e:
+    - madhatter106/midrise-office-pack-vol10
   521d0b74:
     - 11241036/seasonal-woods-2
+  521dc89f:
+    - madhatter106/midrise-office-pack-vol10
+  521dc90b:
+    - madhatter106/midrise-office-pack-vol10
   54b0b9a8:
     - jasoncw/perry-station
   56fdac74:
@@ -2674,12 +2906,26 @@ lots:
     - buggi/residential-6by-collection
   6c21e652:
     - buggi/residential-6by-collection
+  6d493991:
+    - madhatter106/medium-wealth-shops-vol01
+  6d493def:
+    - madhatter106/medium-wealth-shops-vol01
+  6d49472c:
+    - madhatter106/medium-wealth-shops-vol01
+  6d494b4d:
+    - madhatter106/medium-wealth-shops-vol01
+  6d494c7c:
+    - madhatter106/medium-wealth-shops-vol01
   6d670a55:
     - toroca/5x5-and-6x6-malls
   6d90bb78:
     - jasoncw/db-franklin-co
   6e39a262:
     - jasoncw/continental-bank-and-trust
+  6f9bf23f:
+    - madhatter106/midrise-office-pack-vol09
+  6f9bf93c:
+    - madhatter106/midrise-office-pack-vol09
   706db573:
     - jasoncw/hotel-utica
   7097cb41:
@@ -2688,10 +2934,36 @@ lots:
     - jeronij/ship-pack
   '710e6021':
     - jasoncw/rasmussen-place
+  7162ec76:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ecd1:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ecf1:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ed5c:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ee2e:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ee7f:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ef67:
+    - madhatter106/medium-wealth-shops-vol02
+  7162ef97:
+    - madhatter106/medium-wealth-shops-vol02
+  7162efaa:
+    - madhatter106/medium-wealth-shops-vol02
+  7162efc1:
+    - madhatter106/medium-wealth-shops-vol02
   718a4129:
     - jasoncw/centron-center
   71d45402:
     - jasoncw/innovation-center
+  7218db00:
+    - madhatter106/midrise-office-pack-vol10
+  7219c863:
+    - madhatter106/midrise-office-pack-vol10
+  7219c98e:
+    - madhatter106/midrise-office-pack-vol10
   724d9dcc:
     - jasoncw/sp-building
   7426bfa5:
@@ -2748,16 +3020,34 @@ lots:
     - maxis/adler-planetarium
   8ccf053d:
     - maxis/rockefeller-center
+  8d493a6d:
+    - madhatter106/medium-wealth-shops-vol01
+  8d493e8a:
+    - madhatter106/medium-wealth-shops-vol01
   8d66fc4f:
     - toroca/5x5-and-6x6-malls
   8dd50177:
     - jasoncw/norfair-corporation
   8e620a6b:
     - jasoncw/apple-store-pack
+  8e860a4c:
+    - madhatter106/midrise-office-pack-vol09
+  8e860b1d:
+    - madhatter106/midrise-office-pack-vol09
+  8e8610a9:
+    - madhatter106/midrise-office-pack-vol09
+  8e8613c5:
+    - madhatter106/midrise-office-pack-vol09
   8e8b21d2:
     - jasoncw/wellman-building
   8f65cd97:
     - jasoncw/dreieck-park
+  8f9bf208:
+    - madhatter106/midrise-office-pack-vol09
+  8f9bf5d0:
+    - madhatter106/midrise-office-pack-vol09
+  8f9bfba9:
+    - madhatter106/midrise-office-pack-vol09
   '90001250':
     - pegasus/spam
   '90001251':
@@ -2818,10 +3108,26 @@ lots:
     - jasoncw/cecil-hotel
   '90e43813':
     - jasoncw/cecil-hotel
+  9162ebe6:
+    - madhatter106/medium-wealth-shops-vol02
+  9162ed40:
+    - madhatter106/medium-wealth-shops-vol02
+  9162ef3c:
+    - madhatter106/medium-wealth-shops-vol02
+  9162ef7d:
+    - madhatter106/medium-wealth-shops-vol02
   9184ac98:
     - jasoncw/train-station-set
   91d45495:
     - jasoncw/innovation-center
+  9218da73:
+    - madhatter106/midrise-office-pack-vol10
+  9219ce65:
+    - madhatter106/midrise-office-pack-vol10
+  921dc50b:
+    - madhatter106/midrise-office-pack-vol10
+  921dc65a:
+    - madhatter106/midrise-office-pack-vol10
   '94169840':
     - pegasus/spam
   9426d3df:
@@ -2878,16 +3184,32 @@ lots:
     - 11241036/seasonal-woods-2
   acae3f0c:
     - maxis/mayflower-port
+  ad4939c5:
+    - madhatter106/medium-wealth-shops-vol01
+  ad4945b9:
+    - madhatter106/medium-wealth-shops-vol01
+  ad494915:
+    - madhatter106/medium-wealth-shops-vol01
   ad670004:
     - toroca/5x5-and-6x6-malls
   ad67091b:
     - toroca/5x5-and-6x6-malls
   ae52bebe:
     - maxis/sobchak-lanes
+  af9beffd:
+    - madhatter106/midrise-office-pack-vol09
   b094ebb8:
     - jasoncw/great-northern-hotel
+  b162ec10:
+    - madhatter106/medium-wealth-shops-vol02
+  b162ec58:
+    - madhatter106/medium-wealth-shops-vol02
   b184c540:
     - jasoncw/train-station-set
+  b219cb9b:
+    - madhatter106/midrise-office-pack-vol10
+  b21dc8d8:
+    - madhatter106/midrise-office-pack-vol10
   b2a60a95:
     - jasoncw/basildon-terraces
   b91ea651:
@@ -2948,14 +3270,36 @@ lots:
     - buggi/residential-6by-collection
   ccdc1adf:
     - jasoncw/albee-amphitheater
+  cd481511:
+    - madhatter106/midrise-office-pack-vol09
+  cd493564:
+    - madhatter106/medium-wealth-shops-vol01
+  cd494a50:
+    - madhatter106/medium-wealth-shops-vol01
+  cd494c4e:
+    - madhatter106/medium-wealth-shops-vol01
   cd670826:
     - toroca/5x5-and-6x6-malls
   cd721b49:
     - jasoncw/farrands-department-store
+  ce860caf:
+    - madhatter106/midrise-office-pack-vol09
+  ce860d3e:
+    - madhatter106/midrise-office-pack-vol09
+  ce860e12:
+    - madhatter106/midrise-office-pack-vol09
+  ce860f16:
+    - madhatter106/midrise-office-pack-vol09
+  ce86100c:
+    - madhatter106/midrise-office-pack-vol09
+  ce861316:
+    - madhatter106/midrise-office-pack-vol09
   cea1e6b4:
     - maxis/luckys-hang-ten
   cf2bfc9e:
     - jasoncw/target
+  cf9beecf:
+    - madhatter106/midrise-office-pack-vol09
   cfbf7787:
     - jasoncw/shields-youth-center
   d04dae96:
@@ -2970,6 +3314,14 @@ lots:
     - jeronij/ship-pack
   d1362cb7:
     - jasoncw/korimako-hotel
+  d162ee6a:
+    - madhatter106/medium-wealth-shops-vol02
+  d218dd43:
+    - madhatter106/midrise-office-pack-vol10
+  d219c831:
+    - madhatter106/midrise-office-pack-vol10
+  d219ca50:
+    - madhatter106/midrise-office-pack-vol10
   d41847ed:
     - cococity/coco-samsung-apartment
   d4185370:
@@ -3064,6 +3416,18 @@ lots:
     - buggi/residential-6by-collection
   ed2174a0:
     - maxis/grutzehaus
+  ed493d08:
+    - madhatter106/medium-wealth-shops-vol01
+  ed4944ca:
+    - madhatter106/medium-wealth-shops-vol01
+  ed49465a:
+    - madhatter106/medium-wealth-shops-vol01
+  ed4948dc:
+    - madhatter106/medium-wealth-shops-vol01
+  ed49494a:
+    - madhatter106/medium-wealth-shops-vol01
+  ed4950e8:
+    - madhatter106/medium-wealth-shops-vol01
   ed67020f:
     - toroca/5x5-and-6x6-malls
   ed670794:
@@ -3072,12 +3436,46 @@ lots:
     - toroca/5x5-and-6x6-malls
   ef7f3d32:
     - jasoncw/metropolitan-exchange-plaza
+  ef9bee7d:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bef5c:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bf378:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bf4bc:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bf722:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bfa6f:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bfc36:
+    - madhatter106/midrise-office-pack-vol09
+  ef9bfece:
+    - madhatter106/midrise-office-pack-vol09
   f0bf0dab:
     - jeronij/ship-pack
   f0c045df:
     - jeronij/ship-pack
+  f162ecaa:
+    - madhatter106/medium-wealth-shops-vol02
+  f162eec5:
+    - madhatter106/medium-wealth-shops-vol02
   f184e53f:
     - jasoncw/train-station-set
+  f218e1a5:
+    - madhatter106/midrise-office-pack-vol10
+  f218e1d5:
+    - madhatter106/midrise-office-pack-vol10
+  f219c95a:
+    - madhatter106/midrise-office-pack-vol10
+  f219cb07:
+    - madhatter106/midrise-office-pack-vol10
+  f219cc12:
+    - madhatter106/midrise-office-pack-vol10
+  f219cf65:
+    - madhatter106/midrise-office-pack-vol10
+  f21dc559:
+    - madhatter106/midrise-office-pack-vol10
   f9235e5a:
     - pegasus/spam
   f936f4fd:
