--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -2224,6 +2224,10 @@ simtropolis/34273-kk-transformer-lots-small:
 simtropolis/34316-sm2-mega-prop-pack-vol5:
   packageId: simmer2/mega-props-vol05
 
+simtropolis/34338-medium-wealth-commercial-shops-volume-1:
+  packageId: madhatter106/medium-wealth-shops-vol01
+  variantId: default
+
 simtropolis/34719-agc-benito-ju%C3%A1rez-monument-01:
   packageId: barroco-hispano/agc-benito-juarez-monument-01
 
@@ -2537,6 +2541,10 @@ simtropolis/35519-ow-roundabout-set:
     '197018':
       variantId: rhd
 
+simtropolis/35522-midrise-office-pack-volume-9:
+  packageId: madhatter106/midrise-office-pack-vol09
+  variantId: default
+
 simtropolis/35526-pc-mega-props-42:
   packageId: pclark06/mega-props-vol04
 
@@ -2577,6 +2585,14 @@ simtropolis/35635-ulisse-wolf-five-nights-at-freddys:
 simtropolis/35660-sfbt-street-tree-mod-revised:
   packageId: sfbt/street-tree-mod
   variantId: hugues-aroux
+
+simtropolis/35703-medium-wealth-commercial-shops-volume-2:
+  packageId: madhatter106/medium-wealth-shops-vol02
+  variantId: default
+
+simtropolis/35717-midrise-office-pack-volume-10:
+  packageId: madhatter106/midrise-office-pack-vol10
+  variantId: default
 
 simtropolis/35718-small-police-station-1:
   packageId: jasoncw/small-police-station-1
