Fix missing data

--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -1149,6 +1149,8 @@ buildings:
     - dolphin66/mega-props-vol03
   14c9c48b:
     - wannglondon/apartments-2
+  14d0958f:
+    - wannglondon/apartments-3
   14d847fd:
     - mattb325/batprops-w2w-vol01
   1504eb0b:
@@ -1371,6 +1373,8 @@ buildings:
     - debussyman/mega-props-vol01
   '32632149':
     - mattb325/batprops-vol01
+  '32769e11':
+    - jasoncw/skycliffe-tower
   330ffc65:
     - kwakelaar/mega-props-vol02
   3349c935:
@@ -1557,6 +1561,8 @@ buildings:
     - wannglondon/american-rowhomes-pack-1
   526f8c8e:
     - wannglondon/american-rowhomes-pack-1
+  528101d0:
+    - jasoncw/otautahi-mews
   52ce4243:
     - wannglondon/san-francisco-buildings-1
   531080c2:
@@ -1577,6 +1583,8 @@ buildings:
     - cococity/coco-pyeonhansesang-apartment
   5489d9a5:
     - pegasus/spam
+  5493edf5:
+    - wannglondon/tulum-homes
   54a0ed63:
     - dolphin66/mega-props-vol03
   54b0b9a8:
@@ -1729,6 +1737,8 @@ buildings:
     - csx/mega-props-vol05
   7150603f:
     - csx/mega-props-vol05
+  7180df77:
+    - wannglondon/tulum-homes
   '71851816':
     - mickebear/mega-props-vol02
   7185181c:
@@ -1972,6 +1982,8 @@ buildings:
     - dolphin66/mega-props-vol03
   94c2046d:
     - wannglondon/mid-century-modern-homes-pack
+  94d5a141:
+    - wannglondon/vintage-sign-prop-pack
   94dc7101:
     - mattb325/batprops-w2w-vol01
   9608e6f0:
@@ -2304,6 +2316,8 @@ buildings:
     - jasoncw/elks-building
   d26c4625:
     - mattb325/batprops-vol01
+  d2a5de32:
+    - jasoncw/newport-house
   d2b2a720:
     - wannglondon/ny-building-12
   d3570334:
@@ -2552,6 +2566,10 @@ lots:
     - 11241036/seasonal-woods
   026e312d:
     - wannglondon/american-rowhomes-pack-1
+  '02810276':
+    - jasoncw/otautahi-mews
+  02a5de88:
+    - jasoncw/newport-house
   04c20482:
     - wannglondon/mid-century-modern-homes-pack
   05351d9a:
@@ -2848,10 +2866,14 @@ lots:
     - madhatter106/midrise-office-pack-vol10
   3219cc94:
     - madhatter106/midrise-office-pack-vol10
+  '32769e62':
+    - jasoncw/skycliffe-tower
   32ccdf16:
     - wannglondon/san-francisco-buildings-1
   3426a2a4:
     - cococity/coco-hillstate-apartment
+  3493ee05:
+    - wannglondon/tulum-homes
   3936f638:
     - pegasus/spam
   3962e3b9:
@@ -3280,6 +3302,8 @@ lots:
     - pegasus/spam
   9426d3df:
     - cococity/coco-hillstate-apartment
+  94d5a141:
+    - wannglondon/vintage-sign-prop-pack
   96fdb0e5:
     - pegasus/terrain-kit
   9960bf4b:
@@ -3480,6 +3504,8 @@ lots:
     - jasoncw/korimako-hotel
   d162ee6a:
     - madhatter106/medium-wealth-shops-vol02
+  d180df89:
+    - wannglondon/tulum-homes
   d1adf0d6:
     - wannglondon/american-rowhomes-pack-1
   d218dd43:
@@ -3554,6 +3580,8 @@ lots:
     - wannglondon/american-rowhomes-pack-1
   e2a6032a:
     - jasoncw/basildon-terraces
+  e4d095a1:
+    - wannglondon/apartments-3
   e5351d66:
     - 11241036/seasonal-woods-2
   e570a2ac:
@@ -17051,6 +17079,8 @@ props:
     - dolphin66/mega-props-vol03
   14cec623:
     - dolphin66/mega-props-vol03
+  14d5a040:
+    - wannglondon/vintage-sign-prop-pack
   14d81748:
     - jestarr/mega-props-vol06
   14db0b18:
@@ -33085,6 +33115,8 @@ props:
     - dolphin66/mega-props-vol03
   74cec629:
     - dolphin66/mega-props-vol03
+  74d5a088:
+    - wannglondon/vintage-sign-prop-pack
   74d885dc:
     - jeronij/mega-props-vol03
   74d885f4:
@@ -37952,6 +37984,10 @@ props:
     - simgoober/models-w2w-commercials
   94d55772:
     - simgoober/models-w2w-commercials
+  94d5a069:
+    - wannglondon/vintage-sign-prop-pack
+  94d5a080:
+    - wannglondon/vintage-sign-prop-pack
   94d885a6:
     - jeronij/mega-props-vol03
   94db7b46:
@@ -43001,6 +43037,8 @@ props:
     - dolphin66/mega-props-vol03
   b4ce3030:
     - dolphin66/mega-props-vol03
+  b4d5a075:
+    - wannglondon/vintage-sign-prop-pack
   b4f26360:
     - jestarr/mega-props-vol06
   b4f264ff:
