--- a/src/scripts/data/assets/simtropolis/106-civic-non-rci.yaml
+++ b/src/scripts/data/assets/simtropolis/106-civic-non-rci.yaml
@@ -21729,6 +21729,8 @@ assets:
     url: https://community.simtropolis.com/files/file/36569-harold-building/
   simtropolis/36572:
     assetId: simtropolis/36572-clatsop-heritage-museum
+    authors:
+      - Rott
     category: 106-civic-non-rci
     lastModified: 2024-11-26T21:59:38.000Z
     name: Clatsop Heritage Museum
@@ -21736,6 +21738,8 @@ assets:
     url: https://community.simtropolis.com/files/file/36572-clatsop-heritage-museum/
   simtropolis/36577:
     assetId: simtropolis/36577-stave-church
+    authors:
+      - Dead_End
     category: 106-civic-non-rci
     lastModified: 2024-12-04T11:34:57.000Z
     name: Stave church
@@ -23954,4 +23958,4 @@ assets:
     url: https://community.simtropolis.com/files/file/997-government-complex/
 
 meta:
-  timestamp: 2024-12-17T09:38:09.625Z
+  timestamp: 2024-12-17T13:48:13.135Z
