--- a/src/scripts/data/assets/simtropolis/110-transportation.yaml
+++ b/src/scripts/data/assets/simtropolis/110-transportation.yaml
@@ -17833,6 +17833,8 @@ assets:
     url: https://community.simtropolis.com/files/file/36566-sc4-viipuri-relot/
   simtropolis/36573:
     assetId: simtropolis/36573-esa-skelleftea-station
+    authors:
+      - Oidaas
     category: 110-transportation
     lastModified: 2024-11-27T19:48:09.000Z
     name: ESA Skelleftea station
@@ -18884,4 +18886,4 @@ assets:
     url: https://community.simtropolis.com/files/file/999-bus-stop-with-allotments/
 
 meta:
-  timestamp: 2024-12-17T09:38:09.625Z
+  timestamp: 2024-12-17T14:33:13.889Z
